# litert

./: .gitignore  CMakeLists.txt  index.js
projects/: CMakeLists.txt
projects/litert-demo/: CMakeLists.txt
projects/litert-demo/src/: main.cpp
tools/: filesystem.cmake
